--- a/src/css/register.scss
+++ b/src/css/register.scss
@@ -285,70 +285,23 @@ header{
 	.article2{
 		margin-bottom: 70px;
 		.left{
+			position: relative;
 			flex: 1;
 			line-height: 50px;
 			text-align: center;
 			opacity: 0.6;
+			//border: 1px solid black;
 			@include font-dpr(30px);
-			span{
+			.protocolBtn,.bracket{
 				color: #ff9e04;
 				font-weight: 600;
 				white-space: nowrap;
 				@include font-dpr(36px);
 			}
+			.protocolBtn{
+				text-decoration: underline;
 			}
-		.protocolDetailWrapper{
-			position: fixed;
-			display: none;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			overflow: auto;
-			z-index: 50;
-			background: #fff;
-			.protocolDetail{
-				min-height: 100%;
-				width: 100%;
-				.main{
-					width: 80%;
-					margin: 0 auto;
-					padding: 64px 20px 128px 20px;
-					h1{
-						color: #3a3a3a;
-						font-size: 40px;
-						text-align: center;
-						margin-bottom: 32px;
-					}
-					p{
-						color: #3a3a3a;
-						opacity: 0.9;
-						font-size: 32px;
-						line-height: 40px;
-					}
-				}
 			}
-			.back{
-				position: relative;
-				text-align: center;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 64px;
-				height: 64px;
-				margin: -98px auto 0 auto;
-				clear: both;
-				border-radius: 50%;
-				background: url("../img/close.png") no-repeat center;
-				background-size: contain;
-				.backBtn{
-					display: inline-block;
-					width: 100%;
-					height: 100%;
-					padding: 10px ;
-				}
-			}
-		}
 		.right{
 			float: right;
 			.img{
@@ -481,6 +434,71 @@ footer{
 			display: inline-block;
 			width: 100px;
 			height: 100px;
+		}
+	}
+}
+
+// protocol.html' css stylesheet
+.protocolDetailWrapper{
+	font-family: "PingFang SC";
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
+	background: #fff;
+	.protocolDetail{
+		min-height: 100%;
+		width: 100%;
+		.main{
+			width: 90%;
+			color: #3a3a3a;
+			//border: 1px solid red;
+			margin: 0 auto;
+			padding: 64px 0 128px;
+			.protocolTitle{
+				font-size: 42px;
+				text-align: center;
+				margin-bottom: 32px;
+			}
+
+			section{
+				margin: 30px 0;
+				.sectionTitle{
+					font-size: 34px;
+				}
+				p,dt,dd{
+					opacity: 0.9;
+					font-size: 30px;
+					line-height: 45px;
+					margin: 10px 0;
+				}
+				dd{
+					margin-left: 2em;
+				}
+			}
+		}
+	}
+	.back{
+		position: relative;
+		text-align: center;
+		@include center;
+		width: 64px;
+		height: 64px;
+		margin: -98px auto 0 auto;
+		clear: both;
+		border-radius: 50%;
+		background: url("../img/close1.png") no-repeat center;
+		background-size: contain;
+		.backBtn{
+			display: inline-block;
+			width: 100%;
+			height: 100%;
+			padding: 10px ;
 		}
 	}
 }
